--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "dotenv": "^16.0.1",
     "inversify": "^6.0.1",
     "near-api-js": "^0.45.1",
-    "reflect-metadata": "^0.1.13"
+    "pino": "^8.4.2",
+    "pino-pretty": "^9.1.0",
+    "reflect-metadata": "^0.1.13",
+    "winston": "^3.8.1"
   }
 }
