--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,21 +1,8 @@
 {
   "compilerOptions": {
-    "baseUrl": ".",
-    "outDir": "dist",
-    "target": "ES5",
-    "lib": ["ESNext"],
-    "module": "CommonJS",
-    "moduleResolution": "Node",
     "skipLibCheck": true,
     "strict": true,
-    "esModuleInterop": true,
-    "resolveJsonModule": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "types": ["reflect-metadata"]
+    "forceConsistentCasingInFileNames": true
   },
-  "include": ["./typings/**/*.d.ts", "src"],
   "exclude": ["node_modules"]
 }
