--- a/packages/sandbox-client/package.json
+++ b/packages/sandbox-client/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "build:dev": "webpack --mode development",
-    "serve:dev": "webpack serve --mode development"
+    "start:dev": "webpack serve --mode development"
   },
   "devDependencies": {
     "@swc/core": "^1.3.0",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "swr": "^1.3.0"
   }
 }
