--- a/packages/sandbox-client/package.json
+++ b/packages/sandbox-client/package.json
@@ -2,13 +2,15 @@
   "name": "@atb/sandbox-client",
   "version": "0.1.0",
   "scripts": {
-    "build:dev": "webpack --mode development",
-    "start:dev": "webpack serve --mode development"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "@swc/core": "^1.3.0",
     "@types/react": "^18.0.19",
     "@types/react-dom": "^18.0.6",
+    "@vitejs/plugin-react": "^2.1.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "^2.7.1",
@@ -18,6 +20,7 @@
     "stylus-loader": "^7.0.0",
     "swc-loader": "^0.2.3",
     "typescript": "^4.8.3",
+    "vite": "^3.1.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.0"
