--- a/packages/sandbox-client/package.json
+++ b/packages/sandbox-client/package.json
@@ -26,9 +26,16 @@
     "webpack-dev-server": "^4.11.0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.8",
+    "bootstrap": "^5.2.1",
+    "nanoid": "^4.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.35.0",
     "react-router-dom": "^6.4.0",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "yup": "^0.32.11",
+    "zustand": "^4.1.1"
   }
 }
